@@ -63,20 +63,7 @@ Index: linux-2.6.22-source/fs/cofusefs/file.c
  	}
  
  	return out.h.error;
-@@ -61,10 +61,10 @@
- 	struct fuse_open_in *inarg = NULL;
- 	unsigned int s = sizeof(struct fuse_in) + sizeof(struct fuse_open_in);
- 
--	in = kmalloc(s, GFP_NOFS);
-+	in = kzalloc(s, GFP_NOFS);
- 	if(!in)
- 		return -ENOMEM;
--	memset(in, 0, s);
-+
- 	inarg = (struct fuse_open_in *) (in + 1);
- 	inarg->flags = file->f_flags & ~O_EXCL;
- 
-@@ -305,12 +305,12 @@
+@@ -244,12 +244,12 @@
  
  	if(fc->flags & FUSE_LARGE_READ) {
  		/* Don't allow this to get mixed up with writes */
@@ -92,7 +79,7 @@ Index: linux-2.6.22-source/fs/cofusefs/file.c
  }
  
  static int write_buffer(struct inode *inode, struct page *page,
-@@ -390,10 +390,10 @@
+@@ -329,10 +329,10 @@
  	unsigned int s = sizeof(struct fuse_in) + sizeof(struct fuse_out) +
  		sizeof(struct fuse_write_in);
  
@@ -105,7 +92,7 @@ Index: linux-2.6.22-source/fs/cofusefs/file.c
  	out = (struct fuse_out *)(in + 1);
  	inarg = (struct fuse_write_in *)(out + 1);
  
-@@ -469,8 +469,11 @@
+@@ -408,8 +408,11 @@
  }
  
  static struct file_operations fuse_file_operations = {
