@@ -2,7 +2,7 @@ Index: linux-2.6.17-source/fs/cofusefs/dev.c
 ===================================================================
 --- /dev/null
 +++ linux-2.6.17-source/fs/cofusefs/dev.c
-@@ -0,0 +1,232 @@
+@@ -0,0 +1,227 @@
 +/*
 +    FUSE: Filesystem in Userspace
 +    Copyright (C) 2001-2004  Miklos Szeredi <miklos@szeredi.hu>
@@ -203,12 +203,7 @@ Index: linux-2.6.17-source/fs/cofusefs/dev.c
 +	}
 +
 +	/* printk("cofuse: request_send %d\n", in->h.opcode); */
-+	out->h.error = -EIO;
-+}
-+
-+int request_send_noreply(struct fuse_conn *fc, struct fuse_in *in)
-+{
-+	return -EIO;
++	out->h.error = -ENOSYS;
 +}
 +
 +int request_send_nonblock(struct fuse_conn *fc, struct fuse_in *in,
@@ -1061,7 +1056,7 @@ Index: linux-2.6.17-source/fs/cofusefs/file.c
 ===================================================================
 --- /dev/null
 +++ linux-2.6.17-source/fs/cofusefs/file.c
-@@ -0,0 +1,504 @@
+@@ -0,0 +1,443 @@
 +/*
 +    FUSE: Filesystem in Userspace
 +    Copyright (C) 2001-2004  Miklos Szeredi <miklos@szeredi.hu>
@@ -1118,83 +1113,22 @@ Index: linux-2.6.17-source/fs/cofusefs/file.c
 +	filemap_fdatawait(inode->i_mapping);
 +}
 +
-+static int fuse_release_old(struct inode *inode, struct file *file)
-+{
-+	struct fuse_conn *fc = INO_FC(inode);
-+	struct fuse_in *in = NULL;
-+	struct fuse_open_in *inarg = NULL;
-+	unsigned int s = sizeof(struct fuse_in) + sizeof(struct fuse_open_in);
-+
-+	in = kmalloc(s, GFP_NOFS);
-+	if(!in)
-+		return -ENOMEM;
-+	memset(in, 0, s);
-+	inarg = (struct fuse_open_in *) (in + 1);
-+	inarg->flags = file->f_flags & ~O_EXCL;
-+
-+	in->h.opcode = FUSE_RELEASE;
-+	in->h.ino = inode->i_ino;
-+	in->numargs = 1;
-+	in->args[0].size = sizeof(struct fuse_open_in);
-+	in->args[0].value = inarg;
-+	if(!request_send_noreply(fc, in))
-+		return 0;
-+
-+	kfree(in);
-+	return 0;
-+}
-+
 +static int fuse_release(struct inode *inode, struct file *file)
 +{
-+	struct fuse_conn *fc = INO_FC(inode);
-+	struct fuse_in in = FUSE_IN_INIT;
-+	struct fuse_out out = FUSE_OUT_INIT;
-+	struct fuse_open_in inarg;
-+
 +	if(file->f_mode & FMODE_WRITE)
 +		fuse_sync_inode(inode);
 +
-+	if (fc->oldrelease)
-+		return fuse_release_old(inode, file);
-+
-+	memset(&inarg, 0, sizeof(inarg));
-+	inarg.flags = file->f_flags & ~O_EXCL;
-+
-+	in.h.opcode = FUSE_RELEASE2;
-+	in.h.ino = inode->i_ino;
-+	in.numargs = 1;
-+	in.args[0].size = sizeof(inarg);
-+	in.args[0].value = &inarg;
-+	request_send(fc, &in, &out);
-+	if (out.h.error == -ENOSYS) {
-+		fc->oldrelease = 1;
-+		return fuse_release_old(inode, file);
-+	}
 +	return 0;
 +}
 +
 +static int fuse_fsync(struct file *file, struct dentry *de, int datasync)
 +{
-+	struct inode *inode = de->d_inode;
-+	struct fuse_conn *fc = INO_FC(inode);
-+	struct fuse_in in = FUSE_IN_INIT;
-+	struct fuse_out out = FUSE_OUT_INIT;
-+	struct fuse_fsync_in inarg;
-+
-+	memset(&inarg, 0, sizeof(inarg));
-+	inarg.datasync = datasync;
-+
-+	in.h.opcode = FUSE_FSYNC;
-+	in.h.ino = inode->i_ino;
-+	in.numargs = 1;
-+	in.args[0].size = sizeof(inarg);
-+	in.args[0].value = &inarg;
-+	request_send(fc, &in, &out);
-+	return out.h.error;
 +
 +	/* FIXME: need to ensure, that all write requests issued
 +           before this request are completed.  Should userspace take
 +           care of this? */
++
++	return 0;
 +}
 +
 +static int fuse_readpage(struct file *file, struct page *page)
@@ -1570,7 +1504,7 @@ Index: linux-2.6.17-source/fs/cofusefs/fuse_i.h
 ===================================================================
 --- /dev/null
 +++ linux-2.6.17-source/fs/cofusefs/fuse_i.h
-@@ -0,0 +1,252 @@
+@@ -0,0 +1,245 @@
 +/*
 +    COFUSE: Filesystem in an host of Cooperative Linux
 +    Copyright (C) 2004 Dan Aloni <da-x@colinux.org>
@@ -1765,12 +1699,6 @@ Index: linux-2.6.17-source/fs/cofusefs/fuse_i.h
 +    			 struct fuse_out *out);
 +
 +/**
-+ * Send a request for which a reply is not expected
-+ */
-+int cofuse_request_send_noreply(struct fuse_conn *fc, struct fuse_in *in);
-+
-+
-+/**
 + * Send a synchronous request without blocking
 + */
 +int cofuse_request_send_nonblock(struct fuse_conn *fc, struct fuse_in *in,
@@ -1802,7 +1730,6 @@ Index: linux-2.6.17-source/fs/cofusefs/fuse_i.h
 +#define fuse_lock cofuse_lock
 +
 +#define request_send cofuse_request_send
-+#define request_send_noreply cofuse_request_send_noreply
 +#define request_send_nonblock cofuse_request_send_nonblock
 +#define release_conn cofuse_release_conn
 +#define fuse_iget cofuse_iget
